# false

./: LICENSE  Makefile.in  README.md  configure  configure.in  false.h  interpreter.c  makefile
src/: code-point.h  false.c  fuzz.c  slice.c  slice.h  stack.c  stack.h  storage.c  storage.h  test_false.c  token.c  token.h
tests/: add.f  atoi.f  bad_symbol.f  basic.f  builtin-assert-bad.f  builtin-assert-good.f  char.f  ctype.f  div_zero.f  dot-product.f  extended.f  factorial.f  factorialv2.f  fstrip.f  gcd.f  gcdv2.f  head.f  hexdump.f  logical.f  sierpinski.f  smoke  spc2tab.expected  spc2tab.f  spc2tab.test  tail.f  tailv2.f
utils/: file.c  file.h
vim/: false.vim  vimrc-fragment
